--- a/app/views/tilaus/index.html
+++ b/app/views/tilaus/index.html
@@ -3,6 +3,7 @@
 
 	<div class="page-header">
 		<h1>Tilaukset</h1>
+		<p>Voit tarkastella yksittäistä tilausta klikkaamalla sen tilaus_id:tä</p>
 	</div>
 
 	{% if poisto_onnistui is defined %}
