Dokumentaatiota en ehtinyt kirjoittaa, mutta muuten olen nähdäkseni täyttänyt viikon 5 palautuksen vaatimukset

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -44,6 +44,7 @@
 						{% if user_logged_in.on_paakayttaja %}
 							<li><a href="{{base_path}}/asiakas">Asiakasrekisteri</a></li>
 							<li><a href="{{base_path}}/ongelma">Ongelmat</a></li>
+							<li><a href="{{base_path}}/osoite">Osoitteet</a></li>
 							<li><a href="{{base_path}}/tilaus">Tilaukset</a></li>
 						{% endif %}
 						{% if not user_logged_in %}
